apps/prod/terria/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: terria
  namespace: terria
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-production
    external-dns.alpha.kubernetes.io/hostname: maps.prod.example.com
spec:
  ingressClassName: nginx
  rules:
  - host: maps.prod.example.com
    http:
      paths:
      - path: /
        pathType: ImplementationSpecific
        backend:
          service:
            name: terria
            port:
              number: 3001
  - host: maps.example.com
    http:
      paths:
      - path: /
        pathType: ImplementationSpecific
        backend:
          service:
            name: terria
            port:
              number: 3001
  tls:
  - hosts:
    - maps.prod.example.com
    - maps.example.com
    secretName: terria-ingress
